# lampson

./: .cursor-task.md  .cursorrules  .gitignore  CHANGELOG.md  README.md  _test_minimax.py  _test_minimax.txt  _test_minimax2.py  _test_minimax2.txt  _test_minimax3.py  boot_tasks.json  core.md  pyproject.toml  rename_to_lamix.sh
config/: default.yaml  default_identity.md  default_memory.md  default_user.md
docs/: PRD.md  PROJECT.md  change-compaction-progress.md  change-interrupt-fix.md  change-llm-circuit-breaker.md  change-self-learning-roadmap.md  compaction-design.md  compaction-v2-design.md  data-architecture.md  design-merge-learned-modules.md  heartbeat-design.md  impl-tasks-skills-p0p1.md  interrupt-design.md  memory-design.md  model-adapter-design.md  planner-fix-impl-spec.md  planner-fix-plan.md  planning-design.md  platform-architecture-design.md  search-tools-design.md  self-exploration-design.md  semantic-skill-retrieval-design.md  session-continuity-design.md  skills-injection-design.md  skills-system-design.md  task-queue-design.md  task-scheduler-design.md  trace-design-review.md  trace-design.md  windows-port-design.md  windows-port-phase1-summary.md
lamix/: .coverage  .cursorrules  README.md  boot_tasks.json  pyproject.toml  rename_to_lamix.sh
projects/: hermes.md
scripts/: _uninstall_entry.py  build_exe.py  install.bat  install_windows.py  migrate_sessions.py  migrate_skills_to_dual_layer.py  safe_mode.py
skills/: file-search.md
src/: cli.py  daemon.py  safe_mode.py  watchdog.py
tests/: test_adapters.py  test_agent.py  test_archive_stale.py  test_auto_compaction_integration.py  test_background_reflection.py  test_cli.py  test_compaction.py  test_compaction_cmd.py  test_config_path_migration.py  test_config_retrieval.py  test_daemon_boot_notify.py  (+44 more)
(+126 files in other folders)
